--- a/chat/package.json
+++ b/chat/package.json
@@ -29,7 +29,7 @@
     "dev-mode": "npm-run-all --parallel server watch",
     "postinstall": "npm i -g live-server html-validate jshint",
     "run-webpack": "webpack --mode production",
-    "build": "npm-run-all validate-html jshint stylelint run-webpack",
+    "build": "npm-run-all validate-html stylelint run-webpack",
     "start-express": "nodemon app.js"
   },
   "browserslist": "> 0.25%, not dead",
