--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "webpack-dev-server",
     "dev-mode": "npm-run-all validate-html stylelint eslint dev server",
     "server": "nodemon ./server/app.js",
-    "build": "npm-run-all validate-html stylelint eslint production"
+    "build": "npm-run-all validate-html stylelint eslint production server"
   },
   "browserslist": "> 0.25%, not dead",
   "author": "Kalagin Ivan",
