--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "eslint": "eslint src/",
     "production": "webpack --mode production",
     "dev": "webpack-dev-server",
-    "dev-mode": "npm-run-all validate-html stylelint eslint dev server",
-    "server": "nodemon ./server/app.js",
-    "build": "npm-run-all validate-html stylelint eslint production server"
+    "dev-mode": "npm-run-all validate-html stylelint eslint dev start",
+    "start": "nodemon ./server/app.js",
+    "build": "npm-run-all validate-html stylelint eslint production"
   },
   "browserslist": "> 0.25%, not dead",
   "author": "Kalagin Ivan",
