--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "production": "webpack --mode production",
     "dev": "webpack-dev-server",
     "dev-mode": "npm-run-all validate-html stylelint eslint dev server",
-    "server": "nodemon ./server/app.js",
-    "build": "npm-run-all validate-html stylelint eslint production"
+    "server": "nodemon ./server/app.js localhost 3000",
+    "build": "npm-run-all production server"
   },
   "browserslist": "> 0.25%, not dead",
   "author": "Kalagin Ivan",
